Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xxx
spec:
  rules:
  - host: xxx
    http:
      paths:
        - backend:
            serviceName: xxx
            servicePort: xxx
